src/objects/School__c.object
<CustomObject>
    <fields>
        <fullName>About_Us__c</fullName>
        <label>About Us</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Board__c</fullName>
        <label>Board</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Board</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Establishment__c</fullName>
        <label>Date of Establishment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <label>Number of Students</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Teachers__c</fullName>
        <label>Number of Teachers</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>School</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>School</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>